--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Mali and Masgal</h1>
+        <h1>Welcome to Chandra and Aishwarya wedding!..</h1>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
